--- a/config.env
+++ b/config.env
@@ -19,8 +19,8 @@ AUTO_READ_STATUS="yes"
 AUTO_DOWNLOAD_STATUS="no"
 
 #═══════[ CHAT FEATURES ]═══════✧#
-CHATBOT="no"
-AUDIO_CHATBOT="no"
+CHATBOT="yes"
+AUDIO_CHATBOT="yes"
 
 #═══════[ GROUP SECURITY ]═══════✧#
 GROUPANTILINK_REMOVE="yes"
@@ -29,7 +29,7 @@ ANTIDELETE_RECOVER_CONVENTION="no"
 
 #═══════[ MESSAGE HANDLING ]═══════✧#
 STATUS_REACT_EMOJIS="🚀,🌎"
-AUTO_REACT="no"
+AUTO_REACT="yes"
 WELCOME_MESSAGE="no"
 GOODBYE_MESSAGE="no"
 
@@ -39,7 +39,7 @@ HEROKU_API_KEY=
 
 #═══════[ AUTO REACTIONS ]═══════✧#
 AUTO_REACT_STATUS="yes"
-AUTO_REPLY_STATUS="no"
+AUTO_REPLY_STATUS="yes"
 AUTO_REJECT_CALL="no"
 AUTO_BIO="yes"
 #════════════════════════════✧#
