--- a/config.env
+++ b/config.env
@@ -19,7 +19,7 @@ AUTO_READ_STATUS="yes"
 AUTO_DOWNLOAD_STATUS="no"
 
 #═══════[ CHAT FEATURES ]═══════✧#
-CHATBOT="yes"
+CHATBOT="no"
 AUDIO_CHATBOT="no"
 
 #═══════[ GROUP SECURITY ]═══════✧#
@@ -29,7 +29,7 @@ ANTIDELETE_RECOVER_CONVENTION="no"
 
 #═══════[ MESSAGE HANDLING ]═══════✧#
 STATUS_REACT_EMOJIS="🚀,🌎"
-AUTO_REACT="yes"
+AUTO_REACT="no"
 WELCOME_MESSAGE="no"
 GOODBYE_MESSAGE="no"
 
@@ -39,7 +39,7 @@ HEROKU_API_KEY=
 
 #═══════[ AUTO REACTIONS ]═══════✧#
 AUTO_REACT_STATUS="yes"
-AUTO_REPLY_STATUS="yes"
+AUTO_REPLY_STATUS="no"
 AUTO_REJECT_CALL="no"
 AUTO_BIO="yes"
 #════════════════════════════✧#
