--- a/config.env
+++ b/config.env
@@ -8,7 +8,7 @@ OWNER_NAME="᚛mannuh᚜"
 OWNER_NUMBER=""
 
 #═══════[ BOT PROFILE ]═══════✧#
-BOT_NAME="BWM-XMD"
+BOT_NAME="MANNUH-MD"
 BOT_IMAGE=""
 STARTING_BOT_MESSAGE='yes'
 
@@ -29,9 +29,9 @@ ANTIDELETE_RECOVER_CONVENTION="no"
 
 #═══════[ MESSAGE HANDLING ]═══════✧#
 STATUS_REACT_EMOJIS="🚀,🌎"
-AUTO_REACT="no"
-WELCOME_MESSAGE="no"
-GOODBYE_MESSAGE="no"
+AUTO_REACT="yes"
+WELCOME_MESSAGE="yes"
+GOODBYE_MESSAGE="yes"
 
 #═══════[ HEROKU CONFIG ]═══════✧#
 HEROKU_APP_NAME=
